--- a/src/problem2/src/styles/Responsive.css
+++ b/src/problem2/src/styles/Responsive.css
@@ -152,8 +152,8 @@
   }
 
   .custom-select-wrapper {
-    flex: 0 0 180px;
-    min-width: 180px;
+    flex: 0 0 150px;
+    min-width: 150px;
   }
 
   .selected-currency {
